--- a/country/russia/gos-simvolika/style.css
+++ b/country/russia/gos-simvolika/style.css
@@ -248,3 +248,6 @@ audio::-webkit-media-controls-panel {
     background: rgb(214,39,24);
     background: linear-gradient(0deg, rgba(214,39,24,1) 0%, rgba(143,44,74,1) 33%, rgba(0,54,167,1) 33%, rgba(0,54,167,1) 67%, rgba(255,255,255,1) 67%, rgba(255,255,255,1) 100%);
 }
+footer p ul{
+    text-decoration: none;
+}
