--- a/country/main.css
+++ b/country/main.css
@@ -59,18 +59,20 @@ main{
 footer {
     width: 100%;
     height: auto;
-    background: #dad9d9;
+    background: #343c50;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
     font-family: 'Bellota', cursive;
+    color: white;
+
 }
 
 footer a {
     text-decoration: none;
     font-size: 15px;
-    color: #3d3d3d;
+    color: white;
 }
 
 footer a:hover {
