--- a/beta/main.css
+++ b/beta/main.css
@@ -5,7 +5,8 @@ body, html{
 }
 header {
     color: white;
-
+animation: tyr 10s infinite;
+transition: 0.5s;
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 50%, rgba(205,0,0,1) 50%, rgba(205,0,0,1) 100%);
     width: 100%;
@@ -47,6 +48,8 @@ header a {
 header a:hover {
     text-decoration: none;
     color: red;
+    transform: translateY(-10px);
+    transition: 1s;
 }
 
 main {
@@ -109,15 +112,12 @@ footer p {
 
 @keyframes tyr {
     0% {
-        background: rgb(219, 13, 32);
-        background: linear-gradient(0deg, rgba(219, 13, 32, 1) 0%, rgba(219, 13, 32, 1) 33%, rgba(1, 141, 233, 1) 33%, rgba(1, 141, 233, 1) 67%, rgba(255, 255, 255, 1) 67%, rgba(255, 255, 255, 1) 100%);
+        background: rgb(0,0,0);
+        background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 25%, rgba(205,0,0,1) 75%, rgba(205,0,0,1) 100%);
     }
-    25% {
-        background: rgb(214, 39, 24);
-        background: linear-gradient(0deg, rgba(214, 39, 24, 1) 0%, rgba(143, 44, 74, 1) 33%, rgba(0, 54, 167, 1) 33%, rgba(0, 54, 167, 1) 67%, rgba(255, 255, 255, 1) 67%, rgba(255, 255, 255, 1) 100%);
-    }
+ 
     100% {
-        background: rgb(219, 13, 32);
-        background: linear-gradient(0deg, rgba(219, 13, 32, 1) 0%, rgba(219, 13, 32, 1) 33%, rgba(1, 141, 233, 1) 33%, rgba(1, 141, 233, 1) 67%, rgba(255, 255, 255, 1) 67%, rgba(255, 255, 255, 1) 100%);
+        background: rgb(255,214,0);
+        background: linear-gradient(0deg, rgba(255,214,0,1) 0%, rgba(255,214,0,1) 25%, rgba(0,91,188,1) 75%, rgba(0,91,188,1) 100%);
     }
 }
