--- a/putin/style.css
+++ b/putin/style.css
@@ -229,7 +229,8 @@ footer p {
 .president {
     color: white;
     text-align: center;
-   
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.500) 0%, rgba(0,0,0,0.500) 25%, rgba(205,0,0,0.500) 75%, rgba(205,0,0,0.500) 100%);
     border: solid 5px;
     border-radius: 50px;
     border-color: green;
